# ase-state-interface

./: .gitignore  Dockerfile  README.md  docker-build.sh  docker-compose.yaml  make-arch  pyproject.toml  sample-env  setup.cfg
.github/workflows/: action.yml  pytest.yml  reviewdog.yml  test.yml
data/: CO.in  CO_copy.in  README.md
data/io_test/test_al/: dos.data  nfinp_scf  nfinp_tmp.data  nfout_scf  run.sh
data/io_test/test_clonal/: GEOMETRY  dos.data  gdiis.data  nfinp_gdiis_pbc  nfinp_tmp.data  nfout_gdiis_pbc  restart.data  run.sh
data/io_test/test_ethylene/: GEOMETRY  dos.data  gdiis.data  nfinp_gdiis  nfinp_tmp.data  nfout_gdiis  restart.data  run.sh
data/io_test/test_ni/: dos.data  nfinp_scf  nfinp_tmp.data  nfout_scf  run.sh
data/io_test/test_si/: dos.data  nfinp_scf  nfout_scf  run.sh
examples/: alcl.py  eos-lattice-constant-bulk-compute.py  io.py  si.py
state-interface/: pyproject.toml
state_interface/: io.py  state.py
tests/: conftest.py  test_read_state_input.py  test_state_interface.py
tests/io/: test_read_state_input.py
tests/jupyterlab/: io_test.ipynb
tests/scf/: pot.He_lda1TM  test_scf.py
