[metadata]
name = state-interface
version = 1.0.0
description = ASE STATE interface
long_description = file: README.md
long_description_content_type = text/markdown
author = Harry Handoko HALIM, Kurt Irvin Medina ROJAS, Ryo UEDA
author_email = harry@cp.prec.eng.osaka-u.ac.jp, krojas@cp.prec.eng.osaka-u.ac.jp, u483198f@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    ase==3.22.1