[tool.poetry]
name = "state-interface"
version = "0.1.0"
description = "ASE STATE interface"
authors = ["ueda <ueda@cp.prec.eng.osaka-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
